--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,32 +1,30 @@
 * {
   font-family: Quicksand, sans-serif;
   color: rgb(200,240,255);
-}
-window {
-  background: none;
-}
-.modules-left, .modules-right {
   font-weight: bold;
 }
-.modules-right widget > * {
-  padding: 0 10px; 
-  border-top-left-radius: 10px;
+window {
+  background:none;
 }
-.modules-right widget:nth-last-child(1) > * { background-color: rgba(55, 112, 228, 0.5); }
-.modules-right widget:nth-last-child(2) > *, .modules-right widget:nth-last-child(1), #workspaces { background-color: rgba(27, 68, 194, 0.5); }
-.modules-right widget:nth-last-child(3) > *, .modules-right widget:nth-last-child(2) { background-color: rgba(10, 40, 170, 0.5); }
+.modules-left widget > * {
+  padding: 0 10px; 
+  border-top-right-radius: 10px;
+}
+.modules-left widget:nth-child(1) > * { background-color: rgba(55, 112, 228, 0.5); }
+.modules-left widget:nth-child(2) > *, .modules-left widget:nth-child(1), #workspaces { background-color: rgba(27, 68, 194, 0.5); }
+.modules-left widget:nth-child(3) > *, .modules-left widget:nth-child(2) { background-color: rgba(10, 40, 170, 0.5); }
 
-#workspaces button.active {
+#workspaces button.visible {
   background-color: rgba(55,112,228,0.7);
   border-radius: 0;
   border-top-right-radius: 10px;
   border-top-left-radius: 10px;
 }
-#workspaces button.active:first-child {
-  border-top-left-radius: 0;
+#workspaces button.active:last-child {
+  border-top-right-radius: 0;
 }
 #workspaces {
-  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
 }
 
 #window {
